# symphonia-adapters

./: Cargo.toml  README.md  cliff.toml  deny.toml  typos.toml
.github/workflows/: ci.yml
crates/symphonia-adapter-fdk-aac/: CHANGELOG.md  Cargo.toml  README.md
crates/symphonia-adapter-fdk-aac/src/: adts.rs  lib.rs  meta.rs
crates/symphonia-adapter-fdk-aac/src/adts/: mod.rs
crates/symphonia-adapter-fdk-aac/src/meta/: mod.rs
crates/symphonia-adapter-libopus/: CHANGELOG.md  Cargo.toml  README.md
crates/symphonia-adapter-libopus/src/: decoder.rs  lib.rs
tests/: Cargo.toml
tests/tests/: integration_test.rs
