[workspace]
members = ["./crates/*", "crates/symphonia-adapter-libopus"]
resolver = "3"

[workspace.package]
name = "symphonia-adapters"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fdk-aac = "0.7.0"
symphonia-core = { git = "https://github.com/pdeljanov/Symphonia", rev = "39798f11d882b9fc959bf2d3c99eb7d6ac8b221a" }
