[workspace]
members = ["./crates/*", "crates/symphonia-adapter-libopus"]
resolver = "3"

[workspace.package]
name = "symphonia-adapters"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fdk-aac = "0.7.0"
opusic-sys = "0.5.7"
symphonia-core = { git = "https://github.com/aschey/Symphonia", rev = "327b803cb46141e4e2f31c2b8f8169a122c97ba5" }
tracing = "0.1"
