[package]
name = "symphonia-adapter-fdk-aac"
version = "0.1.0"
readme = "README.md"
license = "(MIT OR Apache-2.0) AND MPL-2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
symphonia-core = { workspace = true }
fdk-aac = { workspace = true }
log = { workspace = true }
