[package]
name = "symphonia-adapter-libopus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
opusic-sys = { workspace = true }
symphonia-core = { workspace = true }
